# ai-news-feishu

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: manual-push.yml
config/: rss_sources.yaml
src/: __init__.py  __main__.py  content_processor.py  main.py
src/config/: __init__.py  config_manager.py
src/lark/: __init__.py  client.py  message_builder.py
src/rss/: __init__.py  fetcher.py  models.py  parser.py
src/storage/: __init__.py  database.py
src/utils/: __init__.py  logger.py  retry_manager.py
tests/: test_basic.py
